--- a/Seraphine/appsettings.json
+++ b/Seraphine/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Spotify": {
+    "ClientId": "730a4f3127d54df482178e0251c4894b",
+    "ClientSecret": "bd7e7bf513764eec82a43b12de86de1d",
+    "RedirectUri": "https://webhook.site/14e8419e-db06-46ae-a403-07d538cb0233",
+    "RefreshToken": "AQB8EAcRN4PTuaD21Gp_ocHsAAWQ69xLtTfNMsgzNEVCvB4QwxYBdx-69avh_viGucw3lLqjDt5FZWkU2Kw4ZNQoxPsFklNRTmfL6-0oq27lFnVf4jTtlzUWfAoTn3KofPk"
+  },
   "AllowedHosts": "*"
 }
